# wargaming-test

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  specification.md
tests/: conftest.py  test_storages.py  test_views.py
wargaming_test/: app.py  storages.py  urls.py  utils.py  views.py
