[tool.poetry]
name = "wargaming-test"
version = "0.1.0"
description = ""
authors = ["artsmolin <artursmolin@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.5.3"
pymemcache = "^3.4.0"
aiohttp = "^3.7.4"
pydantic = "^1.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
